adds form element

--- a/4-DOM-pig-game/starter/index.html
+++ b/4-DOM-pig-game/starter/index.html
@@ -28,7 +28,11 @@
                     <div class="player-current-score" id="current-1">0</div>
                 </div>
             </div>
-            <input type="number" name="winning score" step="10">
+            <form>
+                <input type="number" name="winning score" step="10">
+            <p>Winning Score</p>
+            </form>
+            
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
